# Syracuse

./: .gitignore  Cargo.toml  README.md  out.txt  syracuse.json  todo.md
archives/: cubic_splines_interpolation.rs
archives/testing/: cubic_spline_interpolation.ipynb
benchmark/: linalg_parallelization.txt
old_src/: cli.rs  error.rs  main.rs  utils.rs
src/: algorithms.rs  animation.rs  cli.rs  config.rs  dirs.rs  error.rs  main.rs  utils.rs
src/cli/: add.rs  backup.rs  check_in.rs  check_out.rs  gen_completions.rs  graph.rs  list.rs  mod.rs  prune.rs  reindex.rs  remove.rs  start.rs  sum.rs  today.rs  unindex.rs  update.rs  update_add.rs  update_sub.rs  week.rs
src/data/: entries.rs  entry.rs  export.rs  graph.rs  graphing.rs  internal.rs  mod.rs  syrtime.rs
src/data/syrtime/: blocs.rs  mod.rs  syrdate.rs  syrspan.rs  traits.rs
testing/: cubic_spline_interpolation.ipynb
