[package]
name = "syracuse"
version = "3.0.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "4.5", features = ["cargo"] }
crossterm = { version = "0.28" }
directories = { version = "5.0" }
env_logger = { version = "0.11" }
ijson = { version = "0.1" }
itertools = { version = "0.13" }
jiff = { version = "0.1", features = ["logging", "serde"] }
log = { version = "0.4", features = ["serde"] }
plotters = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[features]
twotothree = []

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = "symbols"
codegen-units = 1
