[package]
name = "syracuse"
version = "3.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["cargo"] }
color-eyre = { version = "0.6" }
crossterm = { version = "0.28" }
directories = { version = "6.0" }
ijson = { version = "0.1" }
itertools = { version = "0.14" }
jiff = { version = "0.2", features = ["serde"] }
plotters = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[features]
twotothree = []

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = "symbols"
codegen-units = 1
