[package]
name = "syracuse"
version = "3.2.2"
authors = ["anesthetice"]
edition = "2024"
description = "A simple and (relatively) well-polished cli application used to keep track of your day to day productivity."
readme = "README.md"
repository = "https://github.com/anesthetice/Syracuse"
license-file = "LICENSE"
keywords = [
    "cli",
    "time-management",
    "hours-tracker",
    "time-tracking",
    "productivity",
]
categories = ["command-line-utilities"]
exclude = ["/assets"]

[dependencies]
clap = { version = "4.5", features = ["cargo"] }
clap_complete = { version = "4.5" }
color-eyre = { version = "0.6" }
crossterm = { version = "0.29" }
directories = { version = "6.0" }
ijson = { version = "0.1" }
itertools = { version = "0.14" }
jiff = { version = "0.2", features = ["serde"] }
plotters = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[[bin]]
name = "syr"
path = "src/main.rs"

[features]
twotothree = []

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = "symbols"
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"
